--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nodejs-graphql-fp",
   "version": "0.1.0",
   "main": "index.js",
-  "repository": "git@github.com:fdaciuk/nodejs-graphql-fp.git",
-  "author": "Fernando Daciuk - @fdaciuk",
+  "repository": "",
+  "author": "",
   "license": "MIT",
   "private": true,
   "scripts": {
