--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
   "dependencies": {
     "dotenv": "8.2.0",
     "fp-ts": "2.9.5",
-    "module-alias": "2.2.2"
+    "io-ts": "2.2.16",
+    "io-ts-types": "0.5.16",
+    "module-alias": "2.2.2",
+    "monocle-ts": "2.3.10",
+    "newtype-ts": "0.3.4"
   },
   "devDependencies": {
     "@types/jest": "26.0.22",
-    "@types/module-alias": "2.0.0",
+    "@types/module-alias": "^2.0.1",
     "@types/node": "14.14.41",
     "@typescript-eslint/eslint-plugin": "4.21.0",
     "@typescript-eslint/parser": "4.21.0",
