--- a/package.json
+++ b/package.json
@@ -20,31 +20,31 @@
     "build": "tsc"
   },
   "dependencies": {
-    "dotenv": "8.2.0",
-    "fp-ts": "2.9.5",
+    "dotenv": "^10.0.0",
+    "fp-ts": "^2.11.4",
     "io-ts": "2.2.16",
     "io-ts-types": "0.5.16",
     "module-alias": "2.2.2",
-    "monocle-ts": "2.3.10",
+    "monocle-ts": "^2.3.11",
     "newtype-ts": "0.3.4"
   },
   "devDependencies": {
-    "@types/jest": "26.0.22",
+    "@types/jest": "^27.0.2",
     "@types/module-alias": "^2.0.1",
-    "@types/node": "14.14.41",
-    "@typescript-eslint/eslint-plugin": "4.21.0",
-    "@typescript-eslint/parser": "4.21.0",
-    "eslint": "^7.12.1",
-    "eslint-config-standard": "16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "24.3.5",
+    "@types/node": "^16.10.7",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.0.5",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "husky": "6.0.0",
-    "jest": "26.6.3",
-    "nodemon": "2.0.7",
-    "sucrase": "3.17.1",
-    "ts-jest": "26.5.4",
-    "typescript": "4.2.4"
+    "eslint-plugin-promise": "^5.1.0",
+    "husky": "^7.0.2",
+    "jest": "^27.2.5",
+    "nodemon": "^2.0.13",
+    "sucrase": "^3.20.2",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.4"
   }
 }
